--- a/parts/content.html
+++ b/parts/content.html
@@ -1,12 +1,16 @@
-<!-- wp:post-template -->
-<!-- wp:group -->
-<div class="wp-block-group">
-	<!-- wp:post-title {"isLink":true} /-->
-	<!-- wp:post-date /-->
+<!-- wp:query {query":{"inherit":true}} -->
+<div class="wp-block-query">
+	<!-- wp:post-template -->
+	<!-- wp:group -->
+	<div class="wp-block-group">
+		<!-- wp:post-title {"isLink":true} /-->
+		<!-- wp:post-date /-->
+	</div>
+	<!-- /wp:group -->
+	<!-- /wp:post-template -->
+	<!-- wp:query-pagination {"paginationArrow":"arrow","layout":{"type":"flex","justifyContent":"space-between"}} -->
+		<!-- wp:query-pagination-previous /-->
+		<!-- wp:query-pagination-next /-->
+	<!-- /wp:query-pagination -->
 </div>
-<!-- /wp:group -->
-<!-- /wp:post-template -->
-<!-- wp:query-pagination {"paginationArrow":"arrow","layout":{"type":"flex","justifyContent":"space-between"}} -->
-	<!-- wp:query-pagination-previous /-->
-	<!-- wp:query-pagination-next /-->
-<!-- /wp:query-pagination -->
+<!-- /wp:query -->
