--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,22 +1,21 @@
-<!-- wp:spacer {"height":40} -->
+<!-- wp:spacer {"height":"40px"} -->
 <div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
 
-<!-- wp:group {"layout":{"inherit":true}} -->
+<!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
 <div class="wp-block-group">
-
-	<!-- wp:group {"tagName":"aside","style":{"fontSize":"small"}} -->
+	<!-- wp:group {"tagName":"aside","style":{"fontSize":"small"},"className":"has-small-font-size"} -->
 	<aside class="wp-block-group has-small-font-size">
-
 		<!-- wp:group {"tagName":"section"} -->
 		<section class="wp-block-group">
 			<!-- wp:paragraph -->
 			<p>I’m ryelle, a web developer in Philadelphia. Here you’ll find posts about WordPress, accessibility, JavaScript, and sometimes real life.</p>
 			<!-- /wp:paragraph -->
+
 			<!-- wp:buttons -->
 			<div class="wp-block-buttons">
-				<!-- wp:button -->
-				<div class="wp-block-button"><a class="wp-block-button__link" href="https://ryelle.codes/about/">More about me.</a></div>
+				<!-- wp:button {"backgroundColor":"navy","textColor":"white","style":{"spacing":{"padding":{"top":"0.5rem","right":"1rem","bottom":"0.5rem","left":"1rem"}}},"fontSize":"small"} -->
+				<div class="wp-block-button has-custom-font-size has-small-font-size"><a class="wp-block-button__link has-white-color has-navy-background-color has-text-color has-background wp-element-button" href="https://ryelle.codes/about/" style="padding-top:0.5rem;padding-right:1rem;padding-bottom:0.5rem;padding-left:1rem">More about me.</a></div>
 				<!-- /wp:button -->
 			</div>
 			<!-- /wp:buttons -->
@@ -28,8 +27,21 @@
 			<!-- wp:paragraph -->
 			<p>Find me on these sites:</p>
 			<!-- /wp:paragraph -->
+
 			<!-- wp:list -->
-			<ul><li><a href="https://twitter.com/ryelle">twitter</a></li><li><a href="https://github.com/ryelle">github</a></li><li><a href="https://writing.ryelle.codes">wordpress.com</a></li></ul>
+			<ul>
+				<!-- wp:list-item -->
+				<li><a href="https://twitter.com/ryelle">twitter</a></li>
+				<!-- /wp:list-item -->
+
+				<!-- wp:list-item -->
+				<li><a href="https://github.com/ryelle">github</a></li>
+				<!-- /wp:list-item -->
+
+				<!-- wp:list-item -->
+				<li><a rel="me" href="https://front-end.social/@ryelle">mastodon</a></li>
+				<!-- /wp:list-item -->
+			</ul>
 			<!-- /wp:list -->
 		</section>
 		<!-- /wp:group -->
@@ -48,14 +60,14 @@
 </div>
 <!-- /wp:group -->
 
-<!-- wp:spacer {"height":80} -->
+<!-- wp:spacer {"height":"80px"} -->
 <div style="height:80px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
 
-<!-- wp:paragraph {"align":"center","style":{"fontSize":"small"}} -->
+<!-- wp:paragraph {"align":"center","style":{"fontSize":"small"},"className":"has-small-font-size"} -->
 <p class="has-text-align-center has-small-font-size">Proudly powered by <a href="https://wordpress.org/">WordPress</a>.</p>
 <!-- /wp:paragraph -->
 
-<!-- wp:spacer {"height":40} -->
+<!-- wp:spacer {"height":"40px"} -->
 <div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
